feat(API): :sparkles: List organizations (#811)
Basic API for organizations

Ajusta limite do rack_attack

Modified openapi/v2.yaml

Filter by country code

Adds tests

Modified openapi/v2.yaml
