# app/controllers/api/v2/organizations_controller.rb
@@ -1,0 +1,15 @@
+module Api
+  module V2
+    class OrganizationsController < ApiController
+      def index
+        @organizations = Organization.all
+
+        if params[:country_code].present?
+          @organizations = @organizations
+            .includes(:country)
+            .where(country: {code: params[:country_code]})
+        end
+      end
+    end
+  end
+end
